feat: P4ADEV-630-add-api-delete-service-from-io (#20)
* P4ADEV-630-add-api-delete-service-from-io

* P4ADEV-630-add-api-delete-service-from-io
