# openapi/p4pa-io-notification.openapi.yaml
@@ -43,18 +43,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/IoNotificationErrorDTO'
-        '403':
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/IoNotificationErrorDTO'
-        '404':
-          description: TipoDovuto or Ente not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/IoNotificationErrorDTO'
         '429':
           description: Too many requests
           content:
@@ -148,20 +136,52 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/IoNotificationErrorDTO'
-        '400':
-          description: Invalid Request
+        '404':
+          description: Service not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/IoNotificationErrorDTO'
-        '403':
-          description: Forbidden
+        '429':
+          description: Too many requests
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
+  /service/{serviceId}:
+    put:
+      tags:
+        - ioNotification
+      operationId: deleteService
+      parameters:
+        - name: serviceId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+        '401':
+          description: Authentication failed
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/IoNotificationErrorDTO'
         '404':
           description: Service not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
+        '403':
+          description: Service already deleted
           content:
             application/json:
               schema:
@@ -327,6 +347,7 @@ components:
           type: string
           enum:
             - IO_NOTIFICATION_SERVICE_NOT_FOUND
+            - IO_NOTIFICATION_SERVICE_ALREADY_DELETED
             - IO_NOTIFICATION_WRONG_PAYLOAD
             - IO_NOTIFICATION_GENERIC_ERROR
             - IO_NOTIFICATION_TOO_MANY_REQUESTS
